# eval-team-sample-agent

./: .gitignore
dishant-codes/: opik-eval-29-may.py
faraaz-codes/: .gitignore  __init__.py  langfuse_eval.py  langfuse_eval_2.py  langfuse_eval_3.py  langfuse_eval_3_fixed.py  langfuse_eval_fixed.py  tracing.py  travel_concierge_metrics.py
faraaz-codes-2/: README.md  STEPS.md  pyproject.toml
faraaz-codes-2/travel_concierge/: __init__.py  agent.py  tracing.py
faraaz-codes-2/travel_concierge/tools/: search.py
faraaz-codes/data/: langfuse_eval_2_dataset.json  travel_concierge_test_suite.json
sample-agent/: STEPS.md  example.env
sample-agent/opik/: adk_task.py  opik_llm_config.py  run_dataset_eval.py  run_test_suite_eval.py  travel_concierge_dataset.csv  travel_concierge_metrics.py  upload_dataset.py
sample-agent/opik/data/: generate_excel.py  travel_concierge_dataset.json  travel_concierge_test_suite.csv  upload_test_suite.py
sample-agent/travel_concierge/: .gitignore  __init__.py  agent.py
travel_concierge/: __init__.py  agent.py
travel_concierge/.adk/: session.db
