[project]
name = "travel-concierge"
version = "0.1.0"
description = "Local ADK travel concierge for testing multi-agent orchestration with OpenAI and Langfuse."
readme = "README.md"
authors = [
    { name = "Gary Ng", email = "gkcng@google.com" },
    { name = "Arun Santhanagopalan", email = "asanthan@google.com" },
    { name = "Renee Zhang", email = "xiaolizhang@google.com" },
    { name = "Anisha Kaul", email = "anishasjkaul@google.com" },
    { name = "Duncan Renfrow-Symon", email = "drenfrowsymon@google.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "google-genai>=1.21.1,<2.0.0",
    "google-adk>=1.31.0,<2.0.0",
    "langfuse>=4.7.1",
    "litellm>=1.80.0",
    "openinference-instrumentation-google-adk>=0.1.0; python_version >= '3.11' and python_version < '3.14'",
    "openinference-instrumentation>=0.1.34",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "google-adk[eval]>=1.18.0,<2.0.0",
    "pytest-asyncio>=0.26.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
    "mypy>=1.15.0",
    "codespell>=2.2.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20240914",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["C901", "PLR0911"]

[tool.ruff.lint.isort]
known-first-party = ["travel_concierge"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]
exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.agent-starter-pack]
example_question = "I want to plan a trip to Seattle"

[tool.agent-starter-pack.settings]
agent_directory = "travel_concierge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
